added dashboard and create pages

--- a/src/style/nav.scss
+++ b/src/style/nav.scss
@@ -3,7 +3,7 @@
     width: 160px;
     position: fixed;
     z-index: 1;
-    // top: 0;
+    top: 0;
     left: 0;
     background-color: rgb(212, 22, 22);
     padding-top: 20px
