--- a/src/style/create.scss
+++ b/src/style/create.scss
@@ -1,7 +1,7 @@
 .create-ticket {
     display: grid;
     list-style: none;
-    
+    border: 1px;
     }
 
  .create-ticket input {
@@ -9,7 +9,8 @@
 	max-width: 400px;
 	margin: 10px auto;
 	padding: 7px;
-	background: #F7F7F7;
+    background: #F7F7F7;
+    border: 1px;
         }
 
 .title {
