--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -1,6 +1,8 @@
 @import "./nav.scss";
 @import "./render-tickets.scss";
 @import "./create.scss";
+@import "./tickets-summary.scss";
+@import "./dashboard.scss";
 
 body {
     top: 0;
