added thank you page

--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -1,6 +1,7 @@
 @import "./nav.scss";
 @import "./render-tickets.scss";
 @import "./create.scss";
+@import "./update.scss";
 @import "./tickets-summary.scss";
 @import "./dashboard.scss";
 
