--- a/src/style/nav.scss
+++ b/src/style/nav.scss
@@ -26,3 +26,17 @@
     background: rgb(128, 25, 25);
     
   }
+
+  @media all and (max-width: 700px) {
+    .nav-bar {
+        height: 100%;
+        width: 50px;
+        position: fixed;
+        z-index: 1;
+        top: 0;
+        left: 0;
+        background-color: rgb(212, 22, 22);
+        padding-top: 20px
+    }
+
+  }
