--- a/src/style/tickets-summary.scss
+++ b/src/style/tickets-summary.scss
@@ -1,11 +1,14 @@
 .ticket-summary {
     display: flex;
-    border-top: 1px solid;
+    
 
 }
 
 .grid-item {
-    font: bold;
-    border: 1px solid;
+    border: 1px solid #000;
     width: 200px;
+}
+
+.ticket-summary-data {
+    display: flex
 }
