--- a/src/style/update.scss
+++ b/src/style/update.scss
@@ -3,6 +3,8 @@
     grid-template-columns: auto auto;
     border: 1px;
     font-weight: bold;
+    justify-content: space-evenly;
+    
 }
 
  .update-ticket input {
@@ -14,11 +16,37 @@
     
 }
 
-// .update-notes input {
-//     width: 400px;
-//     height: 50px;
-// }
-
 .form-input input {
     width: 400px;
+}
+
+.submit {
+    background-color: rgb(212, 22, 22);
+    border: none;
+    color: white;
+    padding: 5px 15px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin: 4px 2px;
+    width: 200px;
+    cursor: pointer;
+}
+
+.delete {
+    background-color: rgb(212, 22, 22);
+    border: none;
+    color: white;
+    padding: 5px 15px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin: 4px 2px;
+    width: 82px;
+    cursor: pointer;
+    position: relative;
+    top: 130px;
+    left: 250px;
 }
