added cancel button to new ticket

--- a/src/style/create.scss
+++ b/src/style/create.scss
@@ -39,6 +39,20 @@
     cursor: pointer;
 }
 
+.cancel {
+    background-color: rgb(165, 165, 165);
+    border: none;
+    color: white;
+    padding: 5px 15px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin: 4px 2px;
+    width: 200px;
+    cursor: pointer;
+}
+
 @media all and (max-width: 700px) {
     .create-ticket {
         display: flex;
