--- a/src/style/tickets-summary.scss
+++ b/src/style/tickets-summary.scss
@@ -13,11 +13,9 @@
     display: grid;
     cursor: pointer;
     grid-template-columns: repeat(4, minmax(0, 1fr));
-
-    
 }
 
 .ticket-summary-data:hover {
-    font-weight: bold;
+    color: rgb(212, 22, 22);
   }
 
