--- a/src/style/nav.scss
+++ b/src/style/nav.scss
@@ -1,21 +1,18 @@
 .nav-bar {
     height: 100%;
-    width: 160px;
-    position: fixed;
-    z-index: 1;
-    top: 0;
-    left: 0;
+    width: 100%;
     background-color: rgb(212, 22, 22);
-    padding-top: 20px
 }
 .nav-bar-links {
     display: flex;
-    flex-direction: column;
+    padding: 10px 12px 10px 20px;
+    font-size: 25px;
+    color: #ffffff;
 }
 .nav-bar-links a {
-    padding: 6px 8px 6px 16px;
+    padding: 6px 20px 6px 16px;
     text-decoration: none;
-    font-size: 25px;
+    font-size: 18px;
     color: #ffffff;
     display: block;
     
@@ -28,19 +25,8 @@
   }
 
   @media all and (max-width: 700px) {
-    .nav-bar {
-        height: 100%;
-        width: 0px;
-        position: fixed;
-        z-index: 1;
-        top: 0;
-        left: 0;
-        background-color: rgb(212, 22, 22);
-        padding-top: 20px
-    }
-
     .nav-bar-links {
-        display: none;
-        
+    display: flex;
+    flex-direction: column;
     }
   }
