more dashboard updates

--- a/src/style/dashboard.scss
+++ b/src/style/dashboard.scss
@@ -34,6 +34,15 @@
 .header {
     display: flex;
     justify-content: space-between;
+    text-decoration: none;
+}
+
+a {
+    text-decoration: none;
+}
+
+a:visited {
+    text-decoration: none;
 }
 
 .add-ticket {
@@ -46,8 +55,9 @@
     display: inline-block;
     font-size: 16px;
     margin: 4px 2px;
-    width: 200px;
+    width: 100px;
     cursor: pointer;
+    border-radius: 7px;
 }
 
 .add-ticket:visited {
@@ -62,4 +72,14 @@
     margin: 4px 2px;
     width: 200px;
     cursor: pointer;
+}
+
+.ticket-title {
+    display: flex;
+    justify-content: flex-start;
+    
+}
+
+.ticket-description {
+    flex-grow: .5;
 }
