--- a/src/style/dashboard.scss
+++ b/src/style/dashboard.scss
@@ -1,11 +1,3 @@
-.bodyWrapper {
-    // border: 1px solid;
-    // background-color: rgb(247, 246, 244);
-    // border-radius: 10px;
-    // box-shadow: 10px 10px 5px grey;
-    // padding: 20px;
-}
-
 .columns {
     display: flex;
     justify-content: space-evenly;
@@ -43,6 +35,7 @@ a {
 
 a:visited {
     text-decoration: none;
+    color: white;
 }
 
 .add-ticket {
@@ -61,17 +54,8 @@ a:visited {
 }
 
 .add-ticket:visited {
-    background-color: rgb(212, 22, 22);
-    border: none;
-    color: white;
-    padding: 5px 15px;
-    text-align: center;
     text-decoration: none;
-    display: inline-block;
-    font-size: 16px;
-    margin: 4px 2px;
-    width: 200px;
-    cursor: pointer;
+    color: white;
 }
 
 .ticket-title {
@@ -82,4 +66,13 @@ a:visited {
 
 .ticket-description {
     flex-grow: .5;
+}
+
+.archive-links:visited {
+    color: black;
+    text-decoration: underline;
+}
+
+.archive-links {
+    color: black;
 }
